--- a/static/views/about.html
+++ b/static/views/about.html
@@ -13,9 +13,9 @@
 </head>
 
 <body>
-    <h1 id="title">Equibop</h1>
+    <h1 id="title">Skibiditop</h1>
     <p>
-        Equibop is a free/libre cross platform desktop app aiming to give you a snappier Discord experience with
+        Skibiditop is a free/libre cross platform desktop app aiming to give you a snappier Discord experience with
         Equicord
         pre-installed
     </p>
@@ -27,10 +27,10 @@
                 <a href="https://github.com/Equicord/Equicord" target="_blank">Equicord</a>
             </li>
             <li>
-                <a href="https://github.com/Equicord/Equibop" target="_blank">Equibop Source Code</a>
+                <a href="https://github.com/PaperTobi/Skibiditop" target="_blank">Skibiditop Source Code</a>
             </li>
             <li>
-                <a href="https://github.com/Equicord/issues" target="_blank">Report bugs / Request features</a>
+                <a href="https://github.com/Equicord/issues" target="_blank">Report bugs / Request features (For Equibop not Skibiditop!)</a>
             </li>
         </ul>
     </section>
