--- a/static/views/first-launch.html
+++ b/static/views/first-launch.html
@@ -113,10 +113,10 @@
 
 <body>
     <div style="display: flex; align-items: center;">
-        <img src="../../static/icon.png" alt="Equibop Logo"
+        <img src="../../static/icon.png" alt="Skibiditop Logo"
             style="height: 110px; margin-right: 10px; margin-bottom: 15px;" />
         <div>
-            <h1>Welcome to Equibop</h1>
+            <h1>Welcome to Skibiditop</h1>
             <p>Let's customise your experience!</p>
         </div>
     </div>
@@ -134,7 +134,7 @@
         <label>
             <div>
                 <h2>Start with System</h2>
-                <span>Automatically open Equibop when your computer starts</span>
+                <span>Automatically open Skibiditop when your computer starts</span>
             </div>
             <input type="checkbox" name="autoStart" />
         </label>
