--- a/static/views/splash.html
+++ b/static/views/splash.html
@@ -79,7 +79,7 @@
             role="presentation"
         />
 
-        <p>Loading Equibop...</p>
+        <p>Loading Skibiditop...</p>
 
         <div id="progress-section">
             <div class="progressbar">
